--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,5 @@
+@import "main"
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -11,5 +13,6 @@
  * file per style scope.
  *
  *= require_tree .
+ *= require jscrollpane
  *= require_self
  */
