--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -52,19 +52,20 @@
     <div class="grid">
       <div class="clip">
         <ul class="vacancies-list">
-          <% for i in (1..9) %>
-          <li class="vacancies-item vacancies-premium">
+          <% @jobs.each do |job| %>
+          <% job.job_premiun ? premiun = "vacancies-premium" : premiun = "" %>
+          <li class="vacancies-item <%= premiun %>">
             <section>
-              <a class="vacancies-link" href="vagas">
-                <h2 class="vacancies-category">Emprego</h2>
-                <h1 class="vacancies-title">Copeiro</h1>                  
+              <%= link_to opportunities_path(job.slug), :class => "vacancies-link" do %>
+                <h2 class="vacancies-category"><%= job.category.name %></h2>
+                <h1 class="vacancies-title"><%= job.job_title %></h1>                  
                 <p class="vacancies-enterprise">
-                  <span class="fa fa-briefcase"></span> Grupo Concordia
+                  <span class="fa fa-briefcase"></span> <%= job.company.corporate_name %>
                 </p>
                 <p class="vacancies-location">
-                  <span class="fa fa-map-marker"></span> Nova Andradina/MS
+                  <span class="fa fa-map-marker"></span> <%= job.company.city.name %> / <%= job.company.city.state.iso %>
                 </p>
-              </a>
+              <% end %>
 
               <a class="vacancies-social" href="#">
                 <span class="fa fa-facebook-square"></span> Recomende esta Vaga
