implementation form registrations

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -14,6 +14,7 @@
 @import "project/form";
 @import "project/button";
 @import "project/icon";
+@import "project/page";
 @import "project/messages";
 
 @import "project/components/login";
@@ -26,5 +27,4 @@
 // @import "vendor/jcarousel";
 // @import "vendor/tooltip";
 @import "vendor/jscrollpane";
-@import "vendor/font-awesome";
 @import "vendor/boilerplate-fim";
