--- a/app/assets/stylesheets/project/color.css.scss
+++ b/app/assets/stylesheets/project/color.css.scss
@@ -19,8 +19,10 @@ $btn-2: #31B297;		// verde
 $btn-3: #4977B4;		// azul escuro
 $btn-4: #ECF0F1;		// cinza claro
 $btn-5: #25816D;		// verde escuro
+$btn-6: #95A4A5;		// cinza
 
 $input-1: #31B297;	// verde
+$input-2: #E2E6E7;	// cinza claro
 
 $border-1: #31B297;	// verde
 $border-2: #FFF;		// branco
