--- a/app/assets/stylesheets/project/form.css.scss
+++ b/app/assets/stylesheets/project/form.css.scss
@@ -3,13 +3,103 @@
 */
 
 input,
-textarea,
-select {
+select,
+textarea {
 	@include box-sizing(border-box);
 
 	outline: none;
 	text-align: left;
 
-	font-family: 'Lato', sans-serif !important;
+	font-family: 'Lato', sans-serif;
 	font-weight: 400;
+}
+
+label {
+	display: block;
+
+	color: $text-6;
+	font-size: 1.4em;
+	text-align: left;
+	text-transform: lowercase;
+
+	margin-bottom: 5px;
+}
+
+
+.form-input {
+	margin-bottom: 10px;
+	@include placeholder($text-6);
+
+	input {
+		display: block;
+
+		width: 100%;
+		height: 40px;
+		
+		color: $text-6;
+		font-size: 1.4em;
+
+		padding: 10px 15px;
+
+		border: 0;
+		background: $input-2;
+	}
+}
+
+.form-input-green {
+	@include placeholder($text-1);
+
+	input {
+		color: $text-1;
+		background: $input-1;
+	}
+}
+
+
+.form-select {
+	margin-bottom: 10px;
+	@include placeholder($text-6);
+
+	select {
+		display: block;
+
+		width: 100%;
+		height: 40px;
+		
+		color: $text-6;
+		font-size: 1.4em;
+
+		padding: 10px 10px 10px 15px;
+
+		border: 0;
+		background: $input-2;
+	}
+}
+
+.form-select-green {
+	@include placeholder($text-1);
+
+	select {
+		color: $text-1;
+		background: $input-1;
+	}
+}
+
+
+.form-submit {
+	margin-top: 20px;
+	cursor: default;
+
+	.btn {
+		margin: 0 5px;
+	}
+}
+
+
+.form-rules {
+	cursor: default;
+	color: $text-2;
+	font-size: 1.4em;
+	text-align: right;
+	text-transform: lowercase;
 }
