--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,9 +4,11 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+  	<%= f.input :name, required: true, autofocus: true %>
     <%= f.input :email, required: true, autofocus: true %>
     <%= f.input :password, required: true %>
     <%= f.input :password_confirmation, required: true %>
+    <%= f.input :is_candidate, required: true %>
   </div>
 
   <div class="form-actions">
