--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
         <span class="nc-icon nc-recruiters"></span>
         <h2 class="featured-title">
           <strong>Recrutadores</strong>, 
-          <a href="#">cadastre</a> agora sua vaga, é 
+          <%= link_to "cadastre", registration_candidates_path %> agora sua vaga, é 
           <strong>gratuito.</strong>
         </h2>
       </section>
@@ -16,7 +16,7 @@
         <span class="nc-icon nc-candidate"></span>
         <h2 class="featured-title">
           <strong>Candidatos</strong>, 
-          <a href="#">cadastre</a> seu currículo e 
+          <%= link_to "cadastre", registration_recruiters_path %> seu currículo e 
           <strong>pague com um post</strong> no facebook
         </h2>
       </section>
@@ -28,16 +28,16 @@
   <div class="search margin-bottom">
     <div class="grid">
       <form class="search-form" action="">
-        <div class="search-input">
+        <div class="form-input form-input-green">
           <label class="hidden" for="busca">Buscar vaga por região, empresa, descrição...</label>
           <input type="text" id="busca" name="busca" placeholder="buscar vaga por região, empresa, descrição..." required>
         </div>
 
-        <div class="search-input">
+        <div class="form-select form-select-green">
           <label class="hidden" for="area-atuacao">Área de atuação</label>
           <select name="area-atuacao" id="area-atuacao">
-            <option value="opcao-1">Opção 1</option>
-            <option value="opcao-1">Opção 2</option>
+            <option value="opcao-1">opção 1</option>
+            <option value="opcao-1">opção 2</option>
           </select>
         </div>
 
