Finish implementation forms registry

--- a/app/assets/stylesheets/project/messages.css.scss
+++ b/app/assets/stylesheets/project/messages.css.scss
@@ -10,7 +10,7 @@
   color: #31708F;
 }
 
-.alert-alert {
+.alert-alert, .alert-danger {
   background-color: #F2DEDE;
   border-color: #EBCCD1;
   color: #A94442;
