--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,4 +1,9 @@
 <% flash.each do |key, value| %>
+	<% 
+		if key != 'success' && key != 'danger' && key != 'notice'
+			key = 'danger'
+		end
+	%>
     <div class="alert alert-<%= key %>">
       <button type="button" class="close">&times;</button>
       <%= value %>
