added link rails admin

--- a/app/views/layouts/_logged.html.erb
+++ b/app/views/layouts/_logged.html.erb
@@ -8,6 +8,9 @@
 
     <div class="logged-nav">
       <ul>
+        <% if current_user.admin? %>
+        <li><%= link_to "Admin", rails_admin_path, :class => "btn btn-link" %></li>
+        <% end %>
         <li><a class="btn btn-link" href="#">Meu Perfil</a></li>
         <li><a class="btn btn-link" href="#">Trocar de Conta</a></li>
         <li>
