--- a/app/views/candidates/new.html.erb
+++ b/app/views/candidates/new.html.erb
@@ -26,19 +26,19 @@
         <div class="margin-bottom">
           <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
             <div class="form-input form-input-green">
-              <%= f.input :name, required: true, autofocus: true, label: false, :placeholder => "Nome*" %>
+              <%= f.input :name, required: true, autofocus: true, label: false, :placeholder => "Nome*", :input_html => { :id => "user_name_r" } %>
             </div>
 
             <div class="form-input form-input-green">
-              <%= f.input :email, required: true, autofocus: true, label: false, :placeholder => "E-mail*" %>
+              <%= f.input :email, required: true, autofocus: true, label: false, :placeholder => "E-mail*", :input_html => { :id => "user_email_r" } %>
             </div>
 
             <div class="form-input form-input-green">
-               <%= f.input :password, required: true, label: false, :placeholder => "senha*" %>
+               <%= f.input :password, required: true, label: false, :placeholder => "senha*", :input_html => { :id => "user_password_r" }%>
             </div>
 
             <div class="form-input form-input-green">
-              <%= f.input :password_confirmation, required: true, label: false, :placeholder => "Confirmar senha*" %>
+              <%= f.input :password_confirmation, required: true, label: false, :placeholder => "Confirmar senha*", :input_html => { :id => "user_password_confirmation_r" } %>
             </div>
 
             <div class="form-rules">
