--- a/app/views/layouts/_login.html.erb
+++ b/app/views/layouts/_login.html.erb
@@ -20,6 +20,6 @@
       <span class="fa fa-facebook"></span> Login com Facebook
     </a>
 
-    <a class="btn btn-link" href="#">Ainda não sou cadastrador</a>
+    <a class="btn btn-link" href="#">Ainda não sou cadastrado(a)</a>
   </div>
 </div>
