--- a/app/assets/stylesheets/project/components/vacancies.css.scss
+++ b/app/assets/stylesheets/project/components/vacancies.css.scss
@@ -24,7 +24,7 @@
 	margin: 0 7px 12px;
 	padding: 0 0 10px;
 
-	background: $component;
+	background: $component-1;
 
 	.fa {
 		width: 18px;
@@ -140,7 +140,7 @@
 	margin: 0 0 12px;
 	padding: 0 0 10px;
 
-	background: $component;
+	background: $component-1;
 
 	.fa {
 		width: 18px;
