--- a/app/assets/stylesheets/project/color.css.scss
+++ b/app/assets/stylesheets/project/color.css.scss
@@ -5,7 +5,9 @@
 $bg: #ECF0F1;				// cinza claro
 $header: #31B297;		// verde
 $footer: #31B297;		// verde
-$component: #FFF;		// branco
+
+$component-1: #FFF;			// branco
+$component-2: #E2E6E7;	// cinza
 
 $text-1: #ECF0F1;		// cinza claro
 $text-2: #25816D;		// verde escuro
@@ -22,8 +24,9 @@ $btn-5: #25816D;		// verde escuro
 $btn-6: #95A4A5;		// cinza
 
 $input-1: #31B297;	// verde
-$input-2: #E2E6E7;	// cinza claro
+$input-2: #DFE4E6;	// cinza claro
 
 $border-1: #31B297;	// verde
 $border-2: #FFF;		// branco
 $border-3: #25816D;	// verde escuro
+$border-4: #CCC;		// cinza
