--- a/app/assets/stylesheets/project/components/search.css.scss
+++ b/app/assets/stylesheets/project/components/search.css.scss
@@ -8,7 +8,7 @@
 	height: 100px;
 	text-align: center;
 	padding: 30px 0;
-	background: $component;
+	background: $component-1;
 
 	.select {
 		display: inline-block;
