--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,14 +12,14 @@
           <li>
             <span>Candidato</span>
             <ul class="nav-drop">
-              <li><%= link_to "Cadastro", registration_candidates_path %></li>
-              <li><a href="candidato/curriculo">Currículo</a></li>
+              <li><%= link_to "Cadastro", registration_candidate_path %></li>
+              <li><%= link_to "Currículo",  curriculum_candidate_path %></li>
             </ul>
           </li>
           <li>
             <span>Recrutador</span>
             <ul class="nav-drop nav-drop-large">
-              <li><%= link_to "Cadastro", registration_recruiters_path %></li>
+              <li><%= link_to "Cadastro", registration_recruiter_path %></li>
               <li><a href="recrutador/cadastrar-vaga">Cadastrar vaga</a></li>
             </ul>
           </li>
