--- a/app/views/layouts/_logged.html.erb
+++ b/app/views/layouts/_logged.html.erb
@@ -12,7 +12,7 @@
         <li><%= link_to "Admin", rails_admin_path, :class => "btn btn-link" %></li>
         <% end %>
         <li><a class="btn btn-link" href="#">Meu Perfil</a></li>
-        <li><a class="btn btn-link" href="#">Trocar de Conta</a></li>
+        <li><a class="btn btn-link" href="#">Trocar senha</a></li>
         <li>
           <%= link_to "Sair", destroy_user_session_path, :method => :delete, :class => "btn btn-link" %></li>
       </ul>
