init implementation curriculum

--- a/app/assets/stylesheets/project/button.css.scss
+++ b/app/assets/stylesheets/project/button.css.scss
@@ -85,6 +85,14 @@
 	}
 }
 
+.btn-red {
+	background: $btn-7;
+
+	&:hover {
+		background-color: $btn-8;
+	}
+}
+
 
 .btn-facebook {
 	background: $btn-3;
