--- a/app/assets/stylesheets/project/color.css.scss
+++ b/app/assets/stylesheets/project/color.css.scss
@@ -22,6 +22,8 @@ $btn-3: #4977B4;		// azul escuro
 $btn-4: #ECF0F1;		// cinza claro
 $btn-5: #25816D;		// verde escuro
 $btn-6: #95A4A5;		// cinza
+$btn-7: #F45353;		// vermelho
+$btn-8: #CC4242;		// vermelho escuro
 
 $input-1: #31B297;	// verde
 $input-2: #DFE4E6;	// cinza claro
