--- a/app/assets/stylesheets/project/components/login.css.scss
+++ b/app/assets/stylesheets/project/components/login.css.scss
@@ -78,7 +78,7 @@
 
 	margin: 5px 10px;
 
-	background: image_url('nc-min-icons.png') no-repeat left $bg;
+	background: url('nc-min-icons.png') no-repeat left $bg;
 }
 
 .logged-name {
