--- a/app/assets/stylesheets/project/footer.css.scss
+++ b/app/assets/stylesheets/project/footer.css.scss
@@ -10,7 +10,7 @@
 
 .footer-logo {
 	min-height: 90px;
-	background: image_url('nova-curriculo-footer.png') no-repeat top left;
+	background: url('nova-curriculo-footer.png') no-repeat top left;
 }
 
 .footer-title {
