--- a/app/assets/stylesheets/project/header.css.scss
+++ b/app/assets/stylesheets/project/header.css.scss
@@ -9,7 +9,7 @@
 
 #logo {
 	float: left;
-	background: image_url('nova-curriculo.png') no-repeat left;
+	background: url('nova-curriculo.png') no-repeat left;
 
 	a {
 		display: block;
