--- a/app/assets/stylesheets/project/icon.css.scss
+++ b/app/assets/stylesheets/project/icon.css.scss
@@ -6,7 +6,7 @@
 	display: inline-block;
 	width: 60px;
 	height: 60px;
-	background: image_url('nc-icons.png') no-repeat;
+	background: url('nc-icons.png') no-repeat;
 }
 
 .nc-recruiters {
@@ -22,7 +22,7 @@
 	display: inline-block;
 	width: 40px;
 	height: 40px;
-	background: image_url('nc-min-icons.png') no-repeat;
+	background: url('nc-min-icons.png') no-repeat;
 }
 
 .nc-min-recruiters {
