Implementation form objectives Professionals

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -24,6 +24,7 @@
 @import "project/components/vacancies";
 @import "project/components/vacancy";
 @import "project/components/display";
+@import "custom";
 
 // @import "vendor/fancybox";
 // @import "vendor/jcarousel";
