--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -83,8 +83,8 @@
 
               <div class="col-4 col-right padding-left">
                 <div class="form-input">
-                  <label for="cep">CEP*</label>
-                  <input class="cep" type="text" id="cep" name="cep" >
+                  <%= f.label :zip_code, "Cep" %>
+                  <%= f.text_field :zip_code, :class => "cep" %>
                 </div>
               </div>
             </div>
@@ -92,15 +92,15 @@
             <div class="row">
               <div class="col-6 col-left padding-small-right">
                 <div class="form-input">
-                  <label for="telefone">Telefone*</label>
-                  <input class="tel" type="tel" id="telefone" name="telefone" >
+                  <%= f.label :home_phone, "Telefone" %>
+                  <%= f.text_field :home_phone, :class => "tel" %>
                 </div>
               </div>
 
               <div class="col-6 col-left padding-small-left">
                 <div class="form-input">
-                  <label for="telefone_comercial">Telefone Comercial</label>
-                  <input class="tel" type="tel" id="telefone_comercial" name="telefone_comercial">
+                  <%= f.label :commercial_phone, "Telefone comercial" %>
+                  <%= f.text_field :commercial_phone, :class => "tel" %>
                 </div>
               </div>
             </div>
@@ -108,120 +108,70 @@
             <div class="row">
               <div class="col-6 col-left padding-small-right">
                 <div class="form-input">
-                  <label for="celular">Celular*</label>
-                  <input class="tel" type="tel" id="celular" name="celular" >
+                  <%= f.label :mobile_phone, "Celular" %>
+                  <%= f.text_field :mobile_phone, :class => "tel" %>
                 </div>
               </div>
 
               <div class="col-6 col-left padding-small-left">
                 <div class="form-input">
-                  <label for="telefone_comercial">Telefone Recados</label>
-                  <input class="tel" type="tel" id="telefone_comercial" name="telefone_comercial">
+                  <%= f.label :message_phone, "Telefone recado" %>
+                  <%= f.text_field :message_phone, :class => "tel" %>
                 </div>
               </div>
             </div>
           </fieldset>
 
           <div class="form-submit text-center">
-            <input class="btn btn-blue" type="submit" value="Salvar dados do candidato">
+            <%= f.submit "Salvar dados do candidato", :class => "btn btn-blue" %>
           </div>
         <% end %>
       </div>
 
       <div class="col-6 col-right padding-left">
-        <form action="" class="form-curriculo">
+        <%= form_for @candidate, :class => 'form-curriculo' do |f| %>
           <fieldset>
             <legend class="page-caption">Objetivos Profissionais</legend>
 
             <div class="form-input">
-              <label for="objetivo_cargo">Objetivo ou cargo de interesse*</label>
-              <input type="text" id="objetivo_cargo" name="objetivo_cargo" >
+              <%= f.label :position_of_interest, "Objetivo ou cargo de interesse" %>
+              <%= f.text_field :position_of_interest %>
             </div>
 
             <div class="form-radio">
               <span class="form-radio-label">Área Profissional</span>
               
-              <div class="row">
-                <div class="col-6 col-left padding-small-right">
-                  <div class="form-radio-item">
-                    <label for="administrativa">Administrativa</label>
-                    <input type="checkbox" name="administrativa" id="administrativa">
-                  </div>
-                </div>
-                
-                <div class="col-6 col-right padding-small-left">
-                  <div class="form-radio-item">
-                    <label for="agrarias">Agrárias</label>
-                    <input type="checkbox" name="agrarias" id="agrarias">
-                  </div>
-                </div>
-              </div>
-              
-              <div class="row">
-                <div class="col-6 col-left padding-small-right">
-                  <div class="form-radio-item">
-                    <label for="atendimento">Atendimento</label>
-                    <input type="checkbox" name="atendimento" id="atendimento">
-                  </div>
-                </div>
-                
-                <div class="col-6 col-right padding-small-left">
-                  <div class="form-radio-item">
-                    <label for="comunicacao_e_publicidade">Comunicação e Publicidade</label>
-                    <input type="checkbox" name="comunicacao_e_publicidade" id="comunicacao_e_publicidade">
-                  </div>
-                </div>
-              </div>
+              <ul class="checkboxes_curriculum">
+              <%= f.collection_check_boxes(:professional_area_ids, ProfessionalArea.all, :id, :name) do |b|%>
+              <% '<li>'.html_safe << b.label { b.check_box << b.text } << '</li>'.html_safe %>
+              <% end %>
+              </ul>
+
             </div>
 
             <div class="form-radio">
               <span class="form-radio-label">Nível hierárquico</span>
               
-              <div class="row">
-                <div class="col-6 col-left padding-small-right">
-                  <div class="form-radio-item">
-                    <label for="coordenacao_e_supervisao">Coordenação e Supervisão</label>
-                    <input type="checkbox" name="coordenacao_e_supervisao" id="coordenacao_e_supervisao">
-                  </div>
-                </div>
+              <ul class="checkboxes_curriculum">
+              <%= f.collection_check_boxes(:hierarchical_level_ids, HierarchicalLevel.all, :id, :name) do |b|%>
+              <% '<li>'.html_safe << b.label { b.check_box << b.text } << '</li>'.html_safe %>
+              <% end %>
+              </ul>
 
-                <div class="col-6 col-right padding-small-left">
-                  <div class="form-radio-item">
-                    <label for="diretoria">Diretoria</label>
-                    <input type="checkbox" name="diretoria" id="diretoria">
-                  </div>
-                </div>
-              </div>
-              
-              <div class="row">
-                <div class="col-6 col-left padding-small-right">
-                  <div class="form-radio-item">
-                    <label for="especialista_com_curso_superior">Especialista com Curso Superior</label>
-                    <input type="checkbox" name="especialista_com_curso_superior" id="especialista_com_curso_superior">
-                  </div>
-                </div>
-                
-                <div class="col-6 col-right padding-small-left">
-                  <div class="form-radio-item">
-                    <label for="especialista_com_ensino_medio">Especialista com Ensino Médio</label>
-                    <input type="checkbox" name="especialista_com_ensino_medio" id="especialista_com_ensino_medio">
-                  </div>
-                </div>
-              </div>
             </div>
 
             <div class="row">
               <div class="col-6 col-left padding-small-right">
                 <div class="form-input">
-                  <label for="ultimo_salario">Último Salário*</label>
-                  <input class="money" type="text" id="ultimo_salario" name="ultimo_salario" >
+                  <%= f.label :last_salary, "último salário" %>
+                  <%= f.text_field :last_salary, :class => "money" %>
                 </div>
               </div>
 
               <div class="col-6 col-right padding-small-left">
                 <div class="form-input">
-                  <label for="pretensao_salarial">Pretensão Salarial</label>
-                  <input class="money" type="text" id="pretensao_salarial" name="pretensao_salarial">
+                  <%= f.label :salary_pretension, "Pretençào salarial" %>
+                  <%= f.text_field :salary_pretension, :class => "money" %>
                 </div>
               </div>
             </div>
@@ -229,8 +179,8 @@
             <div class="row">
               <div class="col-6 col-right padding-small-left">
                 <div class="form-radio-item">
-                  <label for="combinar">À Combinar</label>
-                  <input type="checkbox" id="combinar" name="combinar">
+                  <%= f.label :salary_to_be_agreed, "à combinar?" %>
+                  <%= f.check_box :salary_to_be_agreed, {}, "true", "false" %>
                 </div>
               </div>
             </div>
@@ -239,7 +189,7 @@
           <div class="form-submit text-center">
             <input class="btn btn-blue" type="submit" value="Salvar objetivo profissional">
           </div>
-        </form>
+        <% end %>
       </div>
     </div>
     
