--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -243,7 +243,7 @@
           
           <div class="display-scroll scroll">
             <ul class="display-list">
-              <?php for ($i = 0; $i < 5; $i++) { ?>
+              <% for i in (1..5) %>
               <li class="display-item">
                 <section>
                   <h3 class="display-title">Curso</h3>
@@ -256,7 +256,7 @@
                   </div>
                 </section>
               </li>
-              <?php } ?>
+              <% end %>
             </ul>
           </div>
         </div>
@@ -303,7 +303,7 @@
           
           <div class="display-scroll scroll">
             <ul class="display-list">
-              <?php for ($i = 0; $i < 5; $i++) { ?>
+              <% for i in (1..5) %>
               <li class="display-item">
                 <section>
                   <h3 class="display-title">Nome</h3>
@@ -321,7 +321,7 @@
                   </div>
                 </section>
               </li>
-              <?php } ?>
+              <% end %>
             </ul>
           </div>
         </div>
@@ -365,7 +365,7 @@
           
           <div class="display-small-scroll scroll">
             <ul class="display-list">
-              <?php for ($i = 0; $i < 10; $i++) { ?>
+              <% for i in (1..5) %>
               <li class="display-item">
                 <section>
                   <h3 class="display-title">Idioma</h3>
@@ -376,7 +376,7 @@
                   </div>
                 </section>
               </li>
-              <?php } ?>
+              <% end %>
             </ul>
           </div>
         </div>
@@ -442,7 +442,7 @@
           
           <div class="display-large-scroll scroll">
             <ul class="display-list">
-              <?php for ($i = 0; $i < 10; $i++) { ?>
+              <% for i in (1..5) %>
               <li class="display-item">
                 <section>
                   <h3 class="display-title">Cargo</h3>
@@ -460,7 +460,7 @@
                   </div>
                 </section>
               </li>
-              <?php } ?>
+              <% end %>
             </ul>
           </div>
         </div>
